--- a/package.json
+++ b/package.json
@@ -1,39 +1,30 @@
 {
-  "name": "solfind",
-  "private": true,
-  "version": "0.0.0",
+  "name": "find-my-items-app",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.32.1",
-    "@project-serum/anchor": "^0.26.0",
-    "@supabase/supabase-js": "^2.76.1",
-    "@tailwindcss/vite": "^4.1.16",
-    "lucide-react": "^0.548.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-hook-form": "^7.65.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4",
-    "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.16",
-    "zustand": "^5.0.8"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "@solana/web3.js": "^1.87.6",
+    "@coral-xyz/anchor": "^0.29.0"
   },
-  "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "env-cmd": "^11.0.0",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "vite": "^7.1.7"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
