--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "@solana/web3.js": "^1.87.6",
-    "@coral-xyz/anchor": "^0.29.0"
+    "react-scripts": "5.0.1"
   },
   "browserslist": {
     "production": [
